# DCD

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.sh  .travis.yml  CHANGELOG.md  README.md  actypes.d  acvisitor.d  appveyor.yml  astconverter.d  autocomplete.d  build.bat  build.sh  buildloop.sh  client.d  constants.d  dub.json  dub.selections.json  dubhash.d  importutils.d  makefile  messages.d  modulecache.d  notes.txt  release-windows.sh  release.sh  semantic.d  server.d  setup-ldc-windows.sh  sonar-project.properties  string_interning.d  stupidlog.d  update-constants.sh
.github/workflows/: ci.yml  pr_info_intro.yml  pr_info_post.yml  pr_info_untrusted.yml  release.yml
bash-completion/completions/: dcd-client  dcd-server
ci/: request_time_stats.d  summary_comment.sh  summary_comment_diff.sh
common/: dub.sdl  dubhash.d
constants-gen/: generator.d  update-constants.sh
conversion/: astconverter.d  first.d  second.d  third.d
dsymbol/: .editorconfig  .gitignore  README.md  dub.json  meson.build
dsymbol/src/dsymbol/: cache_entry.d  coloredlogger.d  deferred.d  import_.d  modulecache.d  scope_.d  semantic.d  string_interning.d  string_interning.d~  symbol.d  tests.d  type_lookup.d  ufcs.d  utils.d
dsymbol/src/dsymbol/builtin/: names.d  symbols.d
dsymbol/src/dsymbol/conversion/: astconverter.d  first.d  package.d  second.d  third.d
dsymbol/subprojects/: dcontainers.wrap  dparse.wrap
editors/emacs/: README.md  ac-dcd.el
editors/kate/d-completion-daemon/: CMakeLists.txt  katedcdcompletion.cpp  katedcdcompletion.h  katedcdplugin.cpp  katedcdplugin.desktop  katedcdplugin.h  katedcdpluginview.cpp
editors/sublimetext2/: README.md
editors/sublimetext3/: README.md
editors/textadept/: README.md  alias.xpm  class.xpm  enum_dec.xpm  function.xpm  interface.xpm  keyword.xpm  module.xpm  package.xpm  struct.xpm  template.xpm  union.xpm  variable.xpm
editors/vim/: README.md
editors/zeus/: README.md
installer/win/: installer.nsi
man1/: dcd-client.1  dcd-server.1
src/: actypes.d  autocomplete.d  client.d  constants.d  dcd_version.d  dscanner-report.json  messages.d  modulecache.d  semantic.d  server.d  string_interning.d
src/client/: client.d
src/common/: constants.d  dcd_version.d  messages.d  socket.d
src/conversion/: astconverter.d  first.d  second.d  third.d
src/server/: autocomplete.d  main.d  server.d
tests/: run_tests.sh
tests/imports/: a.d  b.d  object.d  point.d  scope_mess.d  tc620_import.d
tests/tc001/: expected.txt  file.d  run.sh
tests/tc002/: file.d  run.sh
tests/tc003/: expected1.txt  expected2.txt  file.d  run.sh
tests/tc004/: expected.txt  file.d  run.sh
tests/tc005/: expected.txt  file.d  run.sh
tests/tc006/: expected1.txt  expected3.txt  file.d  run.sh
tests/tc007/: expected1.txt  expected2.txt  file.d  run.sh
tests/tc008/: expected1.txt  file.d  run.sh
tests/tc009/: expected1.txt  expected3.txt  file.d  run.sh
tests/tc010/: expected1.txt  expected2.txt  file.d  run.sh  testfile1_new.d  testfile1_old.d
tests/tc011/: expected1.txt  expected2.txt  file.d  run.sh
tests/tc012/: expected1.txt  expected2.txt  (+2 more)
(+444 files in other folders)
